--- a/src/App.css
+++ b/src/App.css
@@ -109,4 +109,10 @@ th {
 tr:hover {
   background-color: #f1f1f1;
 }
+img{
+   display: flex;
+  justify-content: center; 
+  align-items: center;    
+  height: 300px;
+}
 
