--- a/src/App.css
+++ b/src/App.css
@@ -16,15 +16,24 @@ body {
 .header {
   background-color: #282c34;
   color: white;
-  height: 120px;
+  height: 220px;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 10px;
 }
 
 .header h1 {
   margin: 0;
   font-size: 28px;
+}
+
+/* ZDJĘCIE W HEADERZE */
+.header-image {
+  width: 300px;
+  max-width: 90%;
+  border-radius: 8px;
 }
 
 /* ===== ŚRODKOWA CZĘŚĆ ===== */
